fdo#83848 Add GetAddressConvention to RefButton

Change-Id: I20d633909d3c13bf49998a6cca054ab125b6c991