sc/source/ui/dbgui/validate.cxx
@@ -104,7 +104,7 @@ void ScTPValidationValue::SetReferenceHdl( const ScRange&rRange , ScDocument* pD
 
     if ( m_pRefEdit )
     {
-        OUString aStr(rRange.Format(SCR_ABS_3D, pDoc));
+        OUString aStr(rRange.Format(SCR_ABS_3D, pDoc, pDoc->GetAddressConvention()));
         m_pRefEdit->SetRefString( aStr );
     }
 }
